k3/my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-api
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
      - name: mysql
        image: datascientest/mysql-k8s:1.0.0
        ports:
        - containerPort: 3306
      - name: fastapi
        image: filotomic/fastapi-k8:latest
        ports:
        - containerPort: 8000
