k3/my-service-eval.yml

apiVersion: v1
kind: Service
metadata:
  name: my-service-eval
  labels:
    name: my-api
spec:
  type: ClusterIP
  selector:
    app: my-api
  ports:
    - port: 3306 # Le port sur lequel le Service est exposé à l'intérieur du cluster.
      protocol: TCP
      targetPort: 3306 # Le port sur lequel FastAPI écoute dans le conteneur.
#----
apiVersion: v1
kind: Service
metadata:
  name: my-service-fastapi
spec:
  type: ClusterIP
  selector:
    app: my-api
  ports:
    - protocol: TCP
      port: 8000 # Le port sur lequel le Service est exposé à l'intérieur du cluster.
      targetPort: 8000 # Le port sur lequel FastAPI écoute dans le conteneur.
#-------
