k3/my_ingress_eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-eval
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: my-service-eval
              port: 
                number: 8000
